[package]
name = "crit"
description = "Rust cross-compiler"
version = "0.0.8"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/crit"

[dependencies]
die = "=0.2.0"
getopts = "=0.2.21"
lazy_static = "1.4.0"
pad = "=0.1.6"
regex = "1.7.3"
tinyrick = { version = "=0.0.14", optional = true }
tinyrick_extras = { version = "=0.0.8", optional = true }
toml = "=0.7.3"

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
name = "crit"

[[bin]]
name = "crit"
path = "src/crit.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
