[package]
name = "crit"
description = "Rust cross-compiler"
version = "0.0.12"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/crit"

[dependencies]
die = "0.2.0"
getopts = "0.2.24"
pad = "0.1.6"
regex = "1.12.2"
toml = "0.9.8"

[lib]
name = "crit"

[[bin]]
name = "crit"
path = "src/crit.rs"
